[AdTagging] An ad script is considered an ad if its context is an ad

When determining if a particular script is an ad, the execution
context should be considered and any script running in an ad context
should be considered an ad script. This provides enhanced coverage
when an ad script then reaches into another context to run a function.

Bug: 894080
Change-Id: I69de3343b004b6ef7b7edfe24c7cbda67c925101
Reviewed-on: https://chromium-review.googlesource.com/c/1273823
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Commit-Queue: Josh Karlin <jkarlin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598821}
Former-commit-id: db904e67aa448ee1b5c2301333812071b800b71e